--- a/app/assets/stylesheets/patterns/_button.scss
+++ b/app/assets/stylesheets/patterns/_button.scss
@@ -1,26 +1,18 @@
 .button {
-  background-color: #DC4147;
-  border-radius: 4em;
-  border: 1px solid darken(#DC4147, 5%);
-  box-shadow: 0 2px 2px 0px rgba(0,0,0,0.3);
-  color: white;
-  display: inline-block;
-  font-size: 0.825em;
-  font-weight: bold;
-  padding: 0.5em 1em;
-  margin-top: -1px;
+  background-color: white;
+  border: 1px solid $base-border-color;
+  border-radius: 4px;
+  color: $medium-gray;
+  font-size: 1em;
+  padding: 0.5em 0.75em;
+  text-align: center;
+  text-transform: uppercase;
 
   &:hover {
-    color: white;
-    box-shadow: 0 0 1px 0px rgba(0,0,0,0.3);
-    background-color: #DC4147;
-    margin-top: 0;
+    border: 1px solid $action-color;
+    color: $action-color;
   }
 
   &:active {
-    color: white;
-    box-shadow: inset 0 0 8px 0px rgba(0,0,0,0.3);
-    background-color: #DC4147;
-    margin-top: 0;
   }
 }
