--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -6,14 +6,9 @@
       = render partial: "events/like", locals: { event: event }
     .event__djs
       %ul
-        %li
-          =link_to "DJ Brendan", "DJ Brendan"
-        %li
-          =link_to "Burt Simpson", "DJ Brendan"
-        %li
-          =link_to "Stefonix", "DJ Brendan"
-      - event.profiles.each do |profile|
-        = profile.name
+        - event.profiles.each do |profile|
+          %li
+            = link_to profile.name, profile
     .event__actions
       .event__actions__element
         .button
