--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -36,5 +36,5 @@
       = render event.tags
   = event_flyer_image(event)
   .event__edit-options
-    - if user_signed_in?
-      = link_to 'Edit', edit_event_path(event)
+    - if user_signed_in? && user_owns_event?(event)
+      = link_to 'Edit (created by you)', edit_event_path(event)
