--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -18,7 +18,7 @@
           = f.text_field :title, placeholder: "Enter the name of your party here"
         .field
           = f.label :venue
-          = f.select :venue_id, options_from_collection_for_select(Venue.all, :id, :name), {include_blank: true}, {class: "autocomplete"}
+          = f.select :venue_id, options_from_collection_for_select(Venue.all, :id, :name, event_venue(@event)), { include_blank: true }, { class: "autocomplete" }
         .field-group__venue-notice
           %span Don't see your venue?
           = link_to("Add New Venue", new_venue_path, class: "button")
@@ -44,10 +44,10 @@
       .field-group__fields
         .field
           = f.label :start_date
-          = f.text_field :start_date, class: "datepicker"
+          = f.text_field :start_date, class: "datepicker", value: @event.start_date
         .field
           = f.label :start_time
-          = f.text_field :start_time, class: "timepicker"
+          = f.text_field :start_time, class: "timepicker", value: @event.start_time
 
     .field-group
       .field-group__header
