--- a/app/assets/stylesheets/patterns/_tags.scss
+++ b/app/assets/stylesheets/patterns/_tags.scss
@@ -1,7 +1,7 @@
 .tags a {
-  background-color: $background-gray;
+  background-color: white;
   border-radius: $base-border-radius;
-  border: $base-border;
+  border: 2px solid $blue;
   display: inline-block;
   margin-right: 0.5em;
   padding: 0.25em 0.5em;
