--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -24,7 +24,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 2.25rem;
   text-transform: uppercase;
   font-weight: 800;
 }
@@ -41,6 +41,7 @@ h4 {
 
 h5 {
   font-size: 1em;
+  margin-bottom: 0;
 }
 
 p {
