Style event list header

--- a/app/assets/stylesheets/patterns/_base.scss
+++ b/app/assets/stylesheets/patterns/_base.scss
@@ -2,6 +2,7 @@
 @import "field-group";
 @import "containers";
 @import "event";
+@import "event-list";
 @import "footer";
 @import "helpers";
 @import "horizontal-nav";
