--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,19 +1,20 @@
 %main.main-container
   .outer-container
-    %span Here's what's going on
-    %select
-      %option{value: "tonight"} Tonight
-      %option{value: "tonight"}
-      %option{value: "tonight"}
-      %option{value: "tonight"}
-      %option{value: "tonight"}
-      %option{value: "tonight"}
-      %option{value: "tonight"}
-    %span :
-    %ul.sidebar__list
-      - days_list.each do |day|
-        %li
-          = link_to day.strftime("%A"), find_by: day
+    .event-list__intro
+      %span Here's what's going on
+      %select
+        %option{value: "tonight"} Tonight
+        %option{value: "tonight"}
+        %option{value: "tonight"}
+        %option{value: "tonight"}
+        %option{value: "tonight"}
+        %option{value: "tonight"}
+        %option{value: "tonight"}
+      %span :
+      %ul.sidebar__list
+        - days_list.each do |day|
+          %li
+            = link_to day.strftime("%A"), find_by: day
     %section
       - if @events.length > 0
         - @events.each do |event|
