--- a/app/assets/stylesheets/patterns/_navigation.scss
+++ b/app/assets/stylesheets/patterns/_navigation.scss
@@ -32,7 +32,8 @@
   padding: 0.875rem 1rem;
 
   &:hover {
-    border-bottom: $action-color 3px solid;
+    border-bottom: white 3px solid;
+    color: white;
   }
 }
 
