--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -24,7 +24,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.25rem;
+  font-size: 2.5rem;
   text-transform: uppercase;
   font-weight: 800;
 }
@@ -41,7 +41,9 @@ h4 {
 
 h5 {
   font-size: 1em;
+  font-weight: normal;
   margin-bottom: 0;
+  text-transform: uppercase;
 }
 
 p {
