Refactor follow button component

--- a/app/assets/stylesheets/patterns/_base.scss
+++ b/app/assets/stylesheets/patterns/_base.scss
@@ -3,6 +3,7 @@
 @import "containers";
 @import "event";
 @import "event-list";
+@import "follow";
 @import "footer";
 @import "helpers";
 @import "horizontal-nav";
