--- a/app/assets/stylesheets/layouts/_containers.scss
+++ b/app/assets/stylesheets/layouts/_containers.scss
@@ -1,10 +1,11 @@
 .main-container {
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   padding: 1.5em 1.5rem 0;
 }
 
 .outer-container {
   @include outer-container;
+  padding: 0 1.5rem;
 }
 
 .form-container {
@@ -26,8 +27,7 @@
 
 .full-width-container--dark {
   @extend .full-width-container;
-  background-image: url("header_bg.png");
-  background-color: #5f2099;
+  background-color: #000;
 }
 
 .form-container--login {
