--- a/app/views/profiles/gigs/index.html.haml
+++ b/app/views/profiles/gigs/index.html.haml
@@ -1,6 +1,6 @@
 %main
-  = render partial: "profile", locals: { profile: @profile }
-  = render partial: "stats", locals: { profile: @profile }
+  = render partial: "profiles/profile", locals: { profile: @profile }
+  = render partial: "profiles/stats", locals: { profile: @profile }
 
   .main-container.outer-container
     %h3
