Set up basic follow logic for profile and venue models

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,4 +1,9 @@
 %main
+  = @profile.follows.count
+  - @profile.follows.each do |follow|
+    - if follow.followable_type == "Profile"
+      = follow.name
+
   = render partial: "profile", locals: { profile: @profile }
   = render partial: "stats", locals: { profile: @profile }
 
