--- a/app/views/venues/show.html.haml
+++ b/app/views/venues/show.html.haml
@@ -2,6 +2,9 @@
   %header
     %h1
       = @venue.name
+    %h3
+      - @venue.follows.each do |follow|
+        = follow.follower.name
 
   %section
     = @venue.description
