Style profile tab links

--- a/app/assets/stylesheets/layouts/_containers.scss
+++ b/app/assets/stylesheets/layouts/_containers.scss
@@ -27,7 +27,7 @@
 
 .full-width-container--dark {
   @extend .full-width-container;
-  background-color: #000;
+  background-color: #320c4c;
 }
 
 .form-container--login {
