--- a/app/assets/stylesheets/patterns/_navigation.scss
+++ b/app/assets/stylesheets/patterns/_navigation.scss
@@ -1,8 +1,6 @@
 .navigation {
   @include row();
-  background-color: black;
-  border-bottom: 1px $light-gray solid;
-  border-top: 1px $light-gray solid;
+  background-color: #0d0315;
   position: relative;
 }
 
@@ -23,8 +21,7 @@
 }
 
 .navigation__link {
-  background-color: black;
-  border-bottom: black 3px solid;
+  border-bottom: transparent 3px solid;
   color: $header-nav-color;
   display: block;
   font-size: 1em;
