--- a/app/assets/stylesheets/patterns/_thumb-grid.scss
+++ b/app/assets/stylesheets/patterns/_thumb-grid.scss
@@ -1,10 +1,14 @@
 .thumb-grid {
   @include span-columns(12);
-  display: flex;
 }
 
 .thumb-grid__cell {
   @include span-columns(3);
+  @incldue omega(4n);
   border: $base-border;
   padding: 1rem;
+
+  &:nth-child(4) {
+    @include omega();
+  }
 }
