--- a/app/views/profiles/following.html.haml
+++ b/app/views/profiles/following.html.haml
@@ -3,8 +3,16 @@
   = render partial: "stats", locals: { profile: @profile }
 
   .main-container.outer-container
-    = render partial: "following", locals: { profile: @profile }
-    %h3
-      Upcoming events for #{ @profile.name }
-    - @profile.events.each do |event|
-      = render partial: "events/event", locals: { event: event }
+    %h3 DJs
+    .thumb-grid
+      - @profile.following("Profile").each do |follow|
+        .thumb-grid__cell
+          = follow.image
+          %h3 Unfollow
+
+    .thumb-grid
+      %h3 DJs
+      - @profile.following("Venue").each do |follow|
+        .thumb-grid__cell
+          = follow.image
+          %h3 Unfollow
