Check profile created_at date instead of user

--- a/app/views/profiles/_stats.html.haml
+++ b/app/views/profiles/_stats.html.haml
@@ -21,5 +21,5 @@
     .profile__stat
       %h5 Member Since
       %h3
-        = member_since_date(profile.user.created_at)
+        = member_since_date(profile.created_at)
 
